<?xml version="1.0"?>
<package format="2">
<name>demo_msgs</name>
  <version>2.3.1</version>
  <description>demo_msgs</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rosjava_core</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosjava_core</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
